# GTK4_Practice

./: .gitignore  Cargo.toml
autocompletion_entry/: Cargo.toml
autocompletion_entry/src/: autocomplete_gui.ui  main.rs
checkbox_with_label/: Cargo.toml  README.md
checkbox_with_label/src/: Checkbutton.ui  main.rs
checkbutton_toogleswitch/: Cargo.toml  README.md
checkbutton_toogleswitch/src/: checkbox_toggleswitch.ui  main.rs
composite_template/: Cargo.toml
composite_template/src/: main.rs
css_sample/: Cargo.toml
css_sample/src/: gui.ui  main.rs  style.css
demo/: Cargo.toml
demo/src/: main.rs  text_gui.ui
dialogbox_sample/: Cargo.toml
dialogbox_sample/src/: main.rs
diesel_db_example/: Cargo.toml
entry_completion/: Cargo.toml
entry_completion/src/: main.rs
file_menu/: Cargo.toml  main.ui
file_menu/src/: main.rs
file_menu_simple/: Cargo.toml
file_menu_simple/src/: main.rs
gtk_builder_ui/: Cargo.toml
gtk_builder_ui/src/: main.rs  (+2 more)
gtk_clock_xml/: Cargo.toml
ingest_yaml/: Cargo.toml  README.md  ingest_config.yaml  person.yaml
multiple_button_array/: Cargo.toml  README.md  ingest_config.yaml
mysql_example/: Cargo.toml
postgres_example/: Cargo.toml
practice_doc_01/: Cargo.toml
redis_rust_example/: Cargo.toml
relm4_chatgpt/: Cargo.toml
relm4_sample/: Cargo.toml
rusqlite_example/: Cargo.toml  cats.db
search_bar_sample/: Cargo.toml
src/: main.rs
text_gui_command_gtk/: Cargo.toml
toggle_swith/: Cargo.toml
two_windows/: Cargo.toml
yaml_rust/: Cargo.toml
yaml_rust_devui_issue/: Cargo.toml  dev_ui_config.yaml
(+19 files in other folders)
